--- a/tenant-portal-frontend/src/app/pages/dsgvo/dsgvo.page.html
+++ b/tenant-portal-frontend/src/app/pages/dsgvo/dsgvo.page.html
@@ -1,5 +1,5 @@
-<ion-header class="app-toolbar">
-  <ion-toolbar color="primary">
+<ion-header>
+  <ion-toolbar class="app-toolbar">
     <ion-buttons slot="start">
       <ion-icon name="shield-checkmark-outline" class="toolbar-icon"></ion-icon>
     </ion-buttons>
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-card class="dsgvo-card">
+  <ion-card class="dsgvo-card card-soft">
     <ion-card-header>
       <ion-card-title>{{ 'DSGVO.HEADLINE' | translate }}</ion-card-title>
     </ion-card-header>
@@ -24,12 +24,12 @@
 
     <ion-row class="ion-padding ion-justify-content-between">
       <ion-col size="6">
-        <ion-button expand="block" color="danger" (click)="decline()">
+        <ion-button expand="block" fill="outline" color="medium" (click)="decline()">
           {{ 'DSGVO.DECLINE' | translate }}
         </ion-button>
       </ion-col>
       <ion-col size="6">
-        <ion-button expand="block" color="success" (click)="accept()">
+        <ion-button expand="block" color="primary" (click)="accept()">
           {{ 'DSGVO.ACCEPT' | translate }}
         </ion-button>
       </ion-col>
