--- a/tenant-portal-frontend/src/app/pages/reports/reports.page.scss
+++ b/tenant-portal-frontend/src/app/pages/reports/reports.page.scss
@@ -1,3 +1,20 @@
 .card-soft {
   border-radius: 16px;
 }
+
+ion-item ion-label {
+  margin-left: 8px;
+}
+:host {
+  z-index: 1;
+}
+
+ion-header,
+ion-content,
+ion-toolbar,
+ion-button,
+ion-select,
+ion-checkbox,
+ion-card {
+  pointer-events: auto !important;
+}
