--- a/tenant-portal-frontend/src/app/pages/tabs/tabs.page.html
+++ b/tenant-portal-frontend/src/app/pages/tabs/tabs.page.html
@@ -1,14 +1,14 @@
 <ion-tabs>
   <ion-router-outlet></ion-router-outlet>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" class="app-tabbar">
     <ion-tab-button tab="dashboards" [routerLink]="['/tabs/dashboards']">
-      <ion-icon name="home-outline"></ion-icon>
+      <ion-icon name="analytics-outline" aria-hidden="true"></ion-icon>
       <ion-label>{{ 'TABS.DASHBOARDS' | translate }}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="reports" [routerLink]="['/tabs/reports']">
-      <ion-icon name="stats-chart-outline"></ion-icon>
+      <ion-icon name="document-text-outline" aria-hidden="true"></ion-icon>
       <ion-label>{{ 'TABS.REPORTS' | translate }}</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
