--- a/tenant-portal-frontend/src/app/pages/login/login.page.html
+++ b/tenant-portal-frontend/src/app/pages/login/login.page.html
@@ -10,7 +10,7 @@
       </ion-card-header>
 
       <ion-card-content>
-        <ion-item lines="none">
+        <ion-item lines="none" >
           <ion-input
             [label]="'LOGIN.USERNAME' | translate"
             labelPlacement="stacked"
@@ -47,7 +47,7 @@
     </ion-card>
 
     <div class="legal">
-      <ion-text color="medium">Tenant Portal</ion-text>
+      <ion-text color="medium">Tenant Portal Diplomarbeit 2025/26</ion-text>
     </div>
   </div>
 </ion-content>
