--- a/tenant-portal-frontend/src/app/pages/reports/reports.page.html
+++ b/tenant-portal-frontend/src/app/pages/reports/reports.page.html
@@ -41,12 +41,12 @@
     <ion-card-content>
       <ion-item lines="none">
         <ion-checkbox slot="start" [(ngModel)]="rooms.room1"></ion-checkbox>
-        <ion-label>Raum 1</ion-label>
+        <ion-label>{{ 'REPORTS.ROOM_1' | translate }}</ion-label>
       </ion-item>
 
       <ion-item lines="none">
         <ion-checkbox slot="start" [(ngModel)]="rooms.room2"></ion-checkbox>
-        <ion-label>Raum 2</ion-label>
+        <ion-label>{{ 'REPORTS.ROOM_2' | translate }}</ion-label>
       </ion-item>
 
       <ion-item>
