update dsgvo code

--- a/tenant-portal-frontend/src/app/pages/dsgvo/dsgvo.page.html
+++ b/tenant-portal-frontend/src/app/pages/dsgvo/dsgvo.page.html
@@ -10,15 +10,17 @@
 <ion-content class="ion-padding">
   <ion-card class="dsgvo-card card-soft">
     <ion-card-header>
-      <ion-card-title>{{ 'DSGVO.HEADLINE' | translate }}</ion-card-title>
+      <ion-card-title>{{ 'DSGVO.INTRO' | translate }}</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
-      <p>{{ 'DSGVO.TEXT_1' | translate }}</p>
-      <p>{{ 'DSGVO.TEXT_2' | translate }}</p>
+      <p>{{ 'DSGVO.P1' | translate }}</p>
+      <p>{{ 'DSGVO.P2' | translate }}</p>
+      <p>{{ 'DSGVO.P3' | translate }}</p>
+
       <p>
-        <strong>{{ 'DSGVO.TEXT_3_TITLE' | translate }}</strong><br />
-        {{ 'DSGVO.TEXT_3' | translate }}
+        {{ 'DSGVO.MUST_ACCEPT' | translate }}<br />
+        <strong>{{ 'DSGVO.P3' | translate }}</strong>
       </p>
     </ion-card-content>
 
